Fix textarea max width on small screens.

--- a/src/public/css/elements/forms.less
+++ b/src/public/css/elements/forms.less
@@ -64,6 +64,7 @@ select[multiple] {
 
 textarea {
     width: 400px;
+    max-width: 100%;
     height: 170px;
 }
 
